# monitor-agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.githooks/: pre-push
docs/: ROADMAP.md
docs/decisions/: 0001-station-toolchain.md
docs/design/: caster-station.md  inhabit-both-surfaces.md
docs/examples/: prometheus-tailnet.toml
docs/logos/: README.md  monty-ansi-10.txt  monty-ansi-120.txt  monty-ansi-160.txt  monty-ansi-16x20.txt  monty-ansi-20.txt  monty-ansi-40.txt  monty-ansi-80.txt  monty-ansi-portrait-32.txt  monty-ansi-square-16.txt  monty-ascii-10.txt  monty-ascii-20.txt  monty-ascii-40.txt  monty-ascii-80.txt  monty-ascii-color-10.txt  monty-ascii-color-20.txt  monty-ascii-color-40.txt  monty-ascii-color-80.txt
monitor-alert/: Cargo.toml
monitor-alert/src/: lib.rs  nats_publish.rs  terminal.rs  voice.rs  webhook.rs
monitor-cli/: Cargo.toml
monitor-cli/src/: daemon.rs  doctor.rs  lib.rs  main.rs
monitor-collect/: Cargo.toml
monitor-collect/src/: lib.rs  local.rs  nats.rs  prometheus.rs  ssh.rs
monitor-core/: Cargo.toml
monitor-core/src/: alert.rs  config.rs  lib.rs  metrics.rs
monitor-gui/: Cargo.toml
monitor-gui/assets/monty/: README.md
monitor-gui/src/: lib.rs
monitor-presence/: Cargo.toml
monitor-presence/src/: event.rs  intent.rs  lib.rs  model.rs  presence.rs  session.rs  shared.rs
monitor-station/: Cargo.toml  agent-identity.toml
monitor-station/src/: identity.rs  lib.rs  main.rs
monitor-station/tests/: features.rs  identity.rs
monitor-tui/: Cargo.toml
monitor-tui/src/: ansi.rs  app.rs  event.rs  lib.rs  sink.rs  skin.rs  ui.rs
monitor-voice/: Cargo.toml
monitor-voice/src/: lib.rs
