[package]
name = "monitor-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "monitor-agent — systems monitor and alert daemon with ratatui TUI"
keywords = ["monitor", "alert", "tui", "ops", "observability"]

[[bin]]
name = "monitor-agent"
path = "src/main.rs"

[lib]
name = "monitor_cli"
path = "src/lib.rs"

[features]
default = []
# The egui GUI surface. Optional so the default binary stays lean (no egui).
gui = ["dep:monitor-gui"]

[dependencies]
monitor-core.workspace = true
monitor-collect.workspace = true
monitor-alert.workspace = true
monitor-presence.workspace = true
monitor-tui.workspace = true
monitor-gui = { workspace = true, optional = true }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
async-nats.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
