[package]
name = "monitor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core types, traits, config, and alert engine for monitor-agent"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
