[package]
name = "monitor-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Ratatui dashboard for monitor-agent"

[dependencies]
monitor-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
